--- a/src/Vistas/Menu.form
+++ b/src/Vistas/Menu.form
@@ -9,10 +9,13 @@
             <Property name="text" type="java.lang.String" value="Ciudadano"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+            <MenuItem class="javax.swing.JMenuItem" name="jFormularioCiudadano">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Formulario Ciudadano"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jFormularioCiudadanoActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
