un poco de todo
hoy si trabajamos

--- a/src/Vistas/Menu.form
+++ b/src/Vistas/Menu.form
@@ -48,10 +48,13 @@
             <Property name="text" type="java.lang.String" value="Cita"/>
           </Properties>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem4">
+            <MenuItem class="javax.swing.JMenuItem" name="jtCita">
               <Properties>
-                <Property name="text" type="java.lang.String" value="jMenuItem4"/>
+                <Property name="text" type="java.lang.String" value="Registro de Cita"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtCitaActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
