--- a/src/Vistas/Menu.form
+++ b/src/Vistas/Menu.form
@@ -106,6 +106,9 @@
           <Dimension value="[1080, 507]"/>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
